Fix: align active user's messages properly

--- a/src/Components/Chat.css
+++ b/src/Components/Chat.css
@@ -7,6 +7,7 @@
   color: silver;
   font-size: small;
   font-weight: 200;
+  display: block;
 }
 
 .chat__time {
@@ -17,7 +18,9 @@
 .chat[data-user-message] {
   align-self: flex-end;
   /* text-align is for the chat__time to align to the right */
-  text-align: right;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .chat[data-user-message] .chat__text {
